[package]
name = "linux-loader"
version = "0.1.0"
authors = ["cathy <cathy.zhang@intel.com>"]
edition = "2018"
license = "Apache-2.0 AND BSD-3-Clause"

[features]
default = []
elf = []
bzImage = []


[dependencies.vm-memory]
git = "https://github.com/rust-vmm/vm-memory"
rev = "281b8bd6cd2927f7a65130194b203a1c2b0ad2e3"
features = ["backend-mmap"]
